fixed spacing and view of images from gallery for tablet view

--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -116,12 +116,38 @@
 
 // Section Padding Mixin
 
-@mixin section-padding {
+@mixin padding-before-headlines {
     padding-top: $padding-before-headlines-mobile;
-    padding-bottom: $padding-between-componenets-mobile;
 
     @include tablet-and-up {
         padding-top: $padding-before-headlines-tablet;
+    }
+}
+
+@mixin padding-after-headlines {
+    padding-bottom: $padding-after-headlines-mobile;
+
+    @include tablet-and-up {
+        padding-bottom: $padding-after-headlines-tablet;
+    }
+}
+
+@mixin padding-side {
+    padding-right: $padding-side-mobile;
+    padding-left: $padding-side-mobile;
+
+    @include tablet-and-up {
+        padding-right: $padding-side-tablet;
+        padding-left: $padding-side-tablet;
+    }
+}
+
+@mixin padding-between-componenets {
+    padding-top: $padding-between-componenets-mobile;
+    padding-bottom: $padding-between-componenets-mobile;
+
+    @include tablet-and-up {
+        padding-top: $padding-between-componenets-tablet;
         padding-bottom: $padding-between-componenets-tablet;
     }
 }
